feat: Pay Anything EVM enahancements

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -364,9 +364,11 @@
   "estimated_new_fee": "Estimated new fee",
   "estimated_receive_amount": "Estimated receive amount",
   "eta": "ETA",
+  "ethereum_ecosystem": "Ethereum Ecosystem",
   "etherscan_history": "Etherscan history",
   "event": "Event",
   "events": "Events",
+  "evm_ecosystem_description": "If necessary, modify the network and token you would like to use for this payment.",
   "exchange": "Exchange",
   "exchange_extra_info": "Please don’t forget to specify the Memo or Extra ID while sending this transaction for the exchange",
   "exchange_incorrect_current_wallet_for_xmr": "If you want to swap XMR from your Cake Wallet Monero balance, please switch to your Monero wallet first.",
@@ -792,7 +794,9 @@
   "select_destination": "Please select destination for the backup file.",
   "select_hw_account_below": "Please select which account to restore below:",
   "select_manufacturer_title": "Select Manufacturer",
+  "select_network": "Select Network",
   "select_sell_provider_notice": "Select a sell provider above. You can skip this screen by setting your default sell provider in app settings.",
+  "select_token": "Select Token",
   "select_your_country": "Please select your country",
   "selected_trocador_provider": "selected Trocador provider",
   "sell": "Sell",
