--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -364,9 +364,11 @@
   "estimated_new_fee": "Nouveaux frais estimés",
   "estimated_receive_amount": "Montant estimé à recevoir",
   "eta": "ETA",
+  "ethereum_ecosystem": "Écosystème Ethereum",
   "etherscan_history": "Historique Etherscan",
   "event": "Événement",
   "events": "Événements",
+  "evm_ecosystem_description": "Si nécessaire, modifiez le réseau et le token que vous souhaitez utiliser pour ce paiement.",
   "exchange": "Acheter / Vendre",
   "exchange_extra_info": "N'oubliez pas de spécifier le mémo ou l'identifiant supplémentaire lors de l'envoi de cette transaction pour l'échange",
   "exchange_incorrect_current_wallet_for_xmr": "Si vous souhaitez échanger des XMR depuis le solde Monero de votre Cake Wallet, veuillez d'abord passer à votre portefeuille Monero.",
@@ -791,7 +793,9 @@
   "select_destination": "Veuillez sélectionner la destination du fichier de sauvegarde.",
   "select_hw_account_below": "Veuillez sélectionner le compte à restaurer ci-dessous:",
   "select_manufacturer_title": "Sélectionner le fabricant",
+  "select_network": "Sélectionnez le réseau",
   "select_sell_provider_notice": "Sélectionnez un fournisseur de vente ci-dessus. Vous pouvez ignorer cet écran en définissant votre fournisseur de vente par défaut dans les paramètres de l'application.",
+  "select_token": "Sélectionnez le jeton",
   "select_your_country": "Veuillez sélectionner votre pays",
   "selected_trocador_provider": "fournisseur de trocador sélectionné",
   "sell": "Vendre",
