--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -364,9 +364,11 @@
   "estimated_new_fee": "An kiyasta sabon kudin",
   "estimated_receive_amount": "Kiyasta samun adadin",
   "eta": "Tsire-tsire",
+  "ethereum_ecosystem": "Ecetereum ecosysterem",
   "etherscan_history": "Etherscan tarihin kowane zamani",
   "event": "Lamarin",
   "events": "Abubuwan da suka faru",
+  "evm_ecosystem_description": "Idan ya cancanta, gyara cibiyar sadarwa da alama kuna son amfani da wannan biyan.",
   "exchange": "Canji",
   "exchange_extra_info": "Don Allah kar a manta su saka memba ko karin ID yayin aika wannan ma'amalar don musayar",
   "exchange_incorrect_current_wallet_for_xmr": "Idan kana son canza XMR daga walat ɗin Bed Wallet ɗinka, da fatan za a canza zuwa walat ɗinku na Monero.",
@@ -793,7 +795,9 @@
   "select_destination": "Da fatan za a zaɓi wurin da za a yi wa madadin fayil ɗin.",
   "select_hw_account_below": "Da fatan za a zabi wanda asusun zai gyara a ƙasa:",
   "select_manufacturer_title": "Select Manaser",
+  "select_network": "Zaɓi Hadawa",
   "select_sell_provider_notice": "Zaɓi mai bada siyarwa a sama. Kuna iya tsallake wannan allon ta saita mai bada siyar da ku a cikin saitunan app.",
+  "select_token": "Zabi JKE",
   "select_your_country": "Da fatan za a zabi ƙasarku",
   "selected_trocador_provider": "Zabi mai bada TORACAD",
   "sell": "sayar",
