--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -364,9 +364,11 @@
   "estimated_new_fee": "Գնահատված նոր միջնորդավճար",
   "estimated_receive_amount": "Գնահատված ստացված գումար",
   "eta": "Eta",
+  "ethereum_ecosystem": "Ethereum էկոհամակարգ",
   "etherscan_history": "Etherscan պատմություն",
   "event": "Իրադարձություն",
   "events": "Իրադարձություններ",
+  "evm_ecosystem_description": "Անհրաժեշտության դեպքում փոփոխեք ցանցը և նշանը, որը ցանկանում եք օգտագործել այս վճարման համար:",
   "exchange": "Փոխանակում",
   "exchange_extra_info": "Խնդրում ենք մի մոռացեք նշել հուշագիրը կամ լրացուցիչ ID- ն, այս գործարքը փոխանակման համար ուղարկելիս",
   "exchange_incorrect_current_wallet_for_xmr": "Եթե ​​ցանկանում եք փոխանակել XMR ձեր տորթի դրամապանակից Monero Relandal- ից, խնդրում ենք նախ անցնել ձեր Monero դրամապանակին:",
@@ -790,7 +792,9 @@
   "select_destination": "Խնդրում ենք ընտրել կրկնօրինակ ֆայլի նպատակակետը",
   "select_hw_account_below": "Խնդրում ենք ընտրել, թե որ հաշիվն է վերականգնել հետեւյալը.",
   "select_manufacturer_title": "Ընտրեք արտադրող",
+  "select_network": "Ընտրեք Ցանց",
   "select_sell_provider_notice": "Ընտրեք վաճառքի մատակարարը վերևում։ Դուք կարող եք բաց թողնել այս էկրանը ձեր լռելայն վաճառքի մատակարարը հավելվածի կարգավորումներում սահմանելով",
+  "select_token": "Ընտրեք նշան",
   "select_your_country": "Խնդրում ենք ընտրել ձեր երկիրը",
   "sell": "Ծախել",
   "sell_alert_content": "Մենք ներկայումս պաշտպանում ենք միայն Bitcoin, Ethereum և Litecoin վաճառքը։ Խնդրում ենք ստեղծել կամ միացնել ձեր Bitcoin, Ethereum կամ Litecoin դրամապանակը",
