--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -364,9 +364,11 @@
   "estimated_new_fee": "Nuova commissione stimata",
   "estimated_receive_amount": "Importo di ricezione stimato",
   "eta": "Eta",
+  "ethereum_ecosystem": "Ecosistema Ethereum",
   "etherscan_history": "Cronologia Etherscan",
   "event": "Evento",
   "events": "Eventi",
+  "evm_ecosystem_description": "Se necessario, modifica la rete e il token che desideri utilizzare per questo pagamento.",
   "exchange": "Scambio",
   "exchange_extra_info": "Non dimenticare di specificare la memo o l'ID extra durante l'invio di questa transazione per lo scambio",
   "exchange_incorrect_current_wallet_for_xmr": "Se vuoi scambiare XMR dal tuo portafoglio Cake Wallet, devi prima passare al portafoglio Monero.",
@@ -792,7 +794,9 @@
   "select_destination": "Seleziona la destinazione per il file di backup.",
   "select_hw_account_below": "Seleziona quale account ripristinare:",
   "select_manufacturer_title": "Seleziona il produttore",
+  "select_network": "Seleziona Rete",
   "select_sell_provider_notice": "Seleziona un provider di vendita sopra. Puoi saltare questa schermata impostando il tuo provider di vendita predefinito nelle impostazioni dell'app.",
+  "select_token": "Seleziona Gettone",
   "select_your_country": "Seleziona il tuo paese",
   "selected_trocador_provider": "Provider di Trocador selezionato",
   "sell": "Vendi",
