--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -364,9 +364,11 @@
   "estimated_new_fee": "推定新しい料金",
   "estimated_receive_amount": "推定受信金額",
   "eta": "ETA",
+  "ethereum_ecosystem": "イーサリアムエコシステム",
   "etherscan_history": "イーサスキャンの歴史",
   "event": "イベント",
   "events": "イベント",
+  "evm_ecosystem_description": "必要に応じて、この支払いに使用するネットワークとトークンを変更します。",
   "exchange": "交換",
   "exchange_extra_info": "Exchangeのためにこのトランザクションを送信する際に、メモまたは追加IDを指定することを忘れないでください",
   "exchange_incorrect_current_wallet_for_xmr": "XMRをケーキウォレットモネロバランスから交換したい場合は、最初にMoneroウォレットに切り替えてください。",
@@ -792,7 +794,9 @@
   "select_destination": "バックアップファイルの保存先を選択してください。",
   "select_hw_account_below": "以下に復元するアカウントを選択してください。",
   "select_manufacturer_title": "メーカーを選択します",
+  "select_network": "ネットワークの選択",
   "select_sell_provider_notice": "上記の販売プロバイダーを選択してください。アプリ設定でデフォルトの販売プロバイダーを設定することで、この画面をスキップできます。",
+  "select_token": "トークンの選択",
   "select_your_country": "あなたの国を選択してください",
   "selected_trocador_provider": "選択したTrocadorプロバイダー",
   "sell": "売る",
