--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -364,9 +364,11 @@
   "estimated_new_fee": "Geschatte nieuwe vergoeding",
   "estimated_receive_amount": "Geschat ontvangen bedrag",
   "eta": "ETA",
+  "ethereum_ecosystem": "Ethereum-ecosysteem",
   "etherscan_history": "Etherscan-geschiedenis",
   "event": "Evenement",
   "events": "Evenementen",
+  "evm_ecosystem_description": "Wijzig indien nodig het netwerk en het token dat u voor deze betaling wilt gebruiken.",
   "exchange": "Aandelenbeurs",
   "exchange_extra_info": "Vergeet niet om de memo of extra ID op te geven tijdens het verzenden van deze transactie voor de uitwisseling",
   "exchange_incorrect_current_wallet_for_xmr": "Als je XMR uit je cake -portemonnee Monero -balans wilt ruilen, schakel dan eerst over naar je Monero -portemonnee.",
@@ -791,7 +793,9 @@
   "select_destination": "Selecteer de bestemming voor het back-upbestand.",
   "select_hw_account_below": "Selecteer welk account u hieronder moet herstellen:",
   "select_manufacturer_title": "Selecteer fabrikant",
+  "select_network": "Selecteer Netwerk",
   "select_sell_provider_notice": "Selecteer hierboven een verkoopaanbieder. U kunt dit scherm overslaan door uw standaardverkoopprovider in te stellen in de app-instellingen.",
+  "select_token": "Selecteer Token",
   "select_your_country": "Selecteer uw land",
   "selected_trocador_provider": "Geselecteerde Trocador -provider",
   "sell": "Verkopen",
