--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -364,9 +364,11 @@
   "estimated_new_fee": "Szacowana nowa opłata",
   "estimated_receive_amount": "Szacowana kwota otrzymania",
   "eta": "Eta",
+  "ethereum_ecosystem": "Ekosystem Ethereum",
   "etherscan_history": "Historia Etherscanu",
   "event": "Wydarzenie",
   "events": "Wydarzenia",
+  "evm_ecosystem_description": "Jeśli to konieczne, zmodyfikuj sieć i token, którego chcesz użyć do tej płatności.",
   "exchange": "Giełda",
   "exchange_extra_info": "Nie zapomnij określić notatki lub dodatkowego identyfikatora podczas wysyłania tej transakcji na giełdę",
   "exchange_incorrect_current_wallet_for_xmr": "Jeśli chcesz zamienić XMR z salda Monero, najpierw przejdź na portfel Monero.",
@@ -791,7 +793,9 @@
   "select_destination": "Wybierz miejsce docelowe dla pliku kopii zapasowej.",
   "select_hw_account_below": "Wybierz, które konto przywrócić poniżej:",
   "select_manufacturer_title": "Wybierz producent",
+  "select_network": "Wybierz opcję Sieć",
   "select_sell_provider_notice": "Wybierz dostawcę sprzedaży powyżej. Możesz pominąć ten ekran, ustawiając domyślnego dostawcę sprzedaży w ustawieniach aplikacji.",
+  "select_token": "Wybierz Token",
   "select_your_country": "Wybierz swój kraj",
   "selected_trocador_provider": "Wybrany dostawca Trocador",
   "sell": "Sprzedać",
