--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -364,9 +364,11 @@
   "estimated_new_fee": "Tinatayang bagong fee",
   "estimated_receive_amount": "Tinatayang natanggap na halaga",
   "eta": "Eta",
+  "ethereum_ecosystem": "Ethereum ecosystem",
   "etherscan_history": "Kasaysayan ng Etherscan",
   "event": "Kaganapan",
   "events": "Mga kaganapan",
+  "evm_ecosystem_description": "Kung kinakailangan, baguhin ang network at token na nais mong gamitin para sa pagbabayad na ito.",
   "exchange": "Palitan",
   "exchange_extra_info": "Mangyaring huwag kalimutan na tukuyin ang memo o dagdag na ID habang ipinapadala ang transaksyon na ito para sa palitan",
   "exchange_incorrect_current_wallet_for_xmr": "Kung nais mong magpalit ng XMR mula sa iyong balanse ng Wallet Monero, mangyaring lumipat sa iyong Monero Wallet muna.",
@@ -791,7 +793,9 @@
   "select_destination": "Mangyaring piliin ang patutunguhan para sa backup na file.",
   "select_hw_account_below": "Mangyaring piliin kung aling account ang ibabalik sa ibaba:",
   "select_manufacturer_title": "Piliin ang Tagagawa",
+  "select_network": "Piliin ang Network",
   "select_sell_provider_notice": "Pumili ng provider ng nagbebenta sa itaas. Maaari mong laktawan ang screen na ito sa pamamagitan ng pagtatakda ng iyong default na sell provider sa mga setting ng app.",
+  "select_token": "Piliin ang Token",
   "select_your_country": "Mangyaring piliin ang iyong bansa",
   "selected_trocador_provider": "Napiling Trocador Provider",
   "sell": "Ibenta",
