--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -364,9 +364,11 @@
   "estimated_new_fee": "Орієнтовна нова комісія",
   "estimated_receive_amount": "Орієнтовна сума отримує",
   "eta": "ETA",
+  "ethereum_ecosystem": "Екосистема Ethereum",
   "etherscan_history": "Історія Etherscan",
   "event": "Подія",
   "events": "Події",
+  "evm_ecosystem_description": "Якщо необхідно, змініть мережу та токен, який ви хочете використовувати для цього платежу.",
   "exchange": "Обмін",
   "exchange_extra_info": "Не забудьте вказати пам’ятку або додатковий ідентифікатор під час надсилання цієї транзакції для обміну",
   "exchange_incorrect_current_wallet_for_xmr": "Якщо ви хочете поміняти XMR зі свого балансу для тортів Monero Balance, спочатку перейдіть на свій гаманець Monero.",
@@ -792,7 +794,9 @@
   "select_destination": "Виберіть місце призначення для файлу резервної копії.",
   "select_hw_account_below": "Виберіть, який рахунок відновити нижче:",
   "select_manufacturer_title": "Виберіть виробника",
+  "select_network": "Виберіть Мережа",
   "select_sell_provider_notice": "Виберіть вище постачальника послуг продажу. Ви можете пропустити цей екран, встановивши постачальника послуг продажу за умовчанням у налаштуваннях програми.",
+  "select_token": "Виберіть Токен",
   "select_your_country": "Будь ласка, виберіть свою країну",
   "selected_trocador_provider": "Вибраний постачальник Trocador",
   "sell": "Продати",
