--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -364,9 +364,11 @@
   "estimated_new_fee": "تخمینہ شدہ نئی فیس",
   "estimated_receive_amount": "تخمینہ وصول کی رقم",
   "eta": "ETA",
+  "ethereum_ecosystem": "ایتھریم ماحولیاتی نظام",
   "etherscan_history": "ﺦﯾﺭﺎﺗ ﯽﮐ ﻦﯿﮑﺳﺍ ﺮﮭﺘﯾﺍ",
   "event": "ﺐﯾﺮﻘﺗ",
   "events": "ﺕﺎﺒﯾﺮﻘﺗ",
+  "evm_ecosystem_description": "اگر ضروری ہو تو ، نیٹ ورک اور ٹوکن میں ترمیم کریں جس کی آپ اس ادائیگی کے لئے استعمال کرنا چاہتے ہیں۔",
   "exchange": "تبادلہ",
   "exchange_extra_info": "ایکسچینج کے ل this اس لین دین کو بھیجتے وقت براہ کرم میمو یا اضافی ID کی وضاحت کرنا نہ بھولیں",
   "exchange_incorrect_current_wallet_for_xmr": "اگر آپ اپنے کیک پرس مونیرو بیلنس سے XMR تبدیل کرنا چاہتے ہیں تو ، براہ کرم پہلے اپنے مونیرو پرس میں جائیں۔",
@@ -793,7 +795,9 @@
   "select_destination": "۔ﮟﯾﺮﮐ ﺏﺎﺨﺘﻧﺍ ﺎﮐ ﻝﺰﻨﻣ ﮯﯿﻟ ﮯﮐ ﻞﺋﺎﻓ ﭖﺍ ﮏﯿﺑ ﻡﺮﮐ ﮦﺍﺮﺑ",
   "select_hw_account_below": "براہ کرم ذیل میں کون سا اکاؤنٹ بحال کرنا ہے منتخب کریں:",
   "select_manufacturer_title": "کارخانہ دار کو منتخب کریں",
+  "select_network": "نیٹ ورک کو منتخب کریں",
   "select_sell_provider_notice": "۔ﮟﯿﮨ ﮯﺘﮑﺳ ﮌﻮﮭﭼ ﻮﮐ ﻦﯾﺮﮑﺳﺍ ﺱﺍ ﺮﮐ ﮮﺩ ﺐﯿﺗﺮﺗ ﻮﮐ ﮦﺪﻨﻨﮐ ﻢﮨﺍﺮﻓ ﻞﯿﺳ ﭧﻟﺎﻔﯾﮈ ﮯﻨﭘﺍ ﮟﯿﻣ ﺕﺎﺒ",
+  "select_token": "ٹوکن منتخب کریں",
   "select_your_country": "براہ کرم اپنے ملک کو منتخب کریں",
   "selected_trocador_provider": "منتخب کردہ ٹروکاڈور فراہم کنندہ",
   "sell": "بیچنا",
