--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -364,9 +364,11 @@
   "estimated_new_fee": "Прогнозна нова такса",
   "estimated_receive_amount": "Прогнозна сума за получаване",
   "eta": "Ета",
+  "ethereum_ecosystem": "Екосистема Ethereum",
   "etherscan_history": "История на Etherscan",
   "event": "Събитие",
   "events": "събития",
+  "evm_ecosystem_description": "Ако е необходимо, променете мрежата и токена, които искате да използвате за това плащане.",
   "exchange": "Обмен",
   "exchange_extra_info": "Моля, не забравяйте да посочите бележката или допълнителен лична карта, докато изпращате тази транзакция за борсата",
   "exchange_incorrect_current_wallet_for_xmr": "Ако искате да смените XMR от вашия баланс на портфейла на тортата Monero, моля, преминете първо към вашия портфейл Monero.",
@@ -791,7 +793,9 @@
   "select_destination": "Моля, изберете дестинация за архивния файл.",
   "select_hw_account_below": "Моля, изберете кой акаунт да възстановите по -долу:",
   "select_manufacturer_title": "Изберете производител",
+  "select_network": "Изберете Мрежа",
   "select_sell_provider_notice": "Изберете доставчик на продажба по-горе. Можете да пропуснете този екран, като зададете своя доставчик на продажба по подразбиране в настройките на приложението.",
+  "select_token": "Изберете Token",
   "select_your_country": "Моля, изберете вашата страна",
   "selected_trocador_provider": "Избран доставчик на трокадор",
   "sell": "Продаване",
