--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -364,9 +364,11 @@
   "estimated_new_fee": "Nueva tarifa estimada",
   "estimated_receive_amount": "Cantidad de recepción estimada",
   "eta": "ETA",
+  "ethereum_ecosystem": "Ecosistema Etereum",
   "etherscan_history": "historia de etherscan",
   "event": "Evento",
   "events": "Eventos",
+  "evm_ecosystem_description": "Si es necesario, modifica la red y el token que deseas utilizar para este pago.",
   "exchange": "Intercambiar",
   "exchange_extra_info": "No olvide especificar la nota o la identificación adicional al enviar esta transacción para el intercambio",
   "exchange_incorrect_current_wallet_for_xmr": "Si desea intercambiar XMR desde su balance de Monero en Cake Wallet, primero cambie a su billetera de Monero.",
@@ -792,7 +794,9 @@
   "select_destination": "Selecciona el destino del archivo de copia de seguridad.",
   "select_hw_account_below": "Seleccione qué cuenta restaurar a continuación:",
   "select_manufacturer_title": "Seleccionar fabricante",
+  "select_network": "Seleccionar red",
   "select_sell_provider_notice": "Selecciona un proveedor de venta arriba. Puede omitir esta pantalla configurando su proveedor de venta predeterminado en la configuración de la aplicación.",
+  "select_token": "Seleccionar ficha",
   "select_your_country": "Seleccione su país",
   "selected_trocador_provider": "Proveedor de Trocador seleccionado",
   "sell": "Vender",
