--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -363,9 +363,11 @@
   "estimated_new_fee": "Phí mới ước tính",
   "estimated_receive_amount": "Số tiền nhận ước tính",
   "eta": "Eta",
+  "ethereum_ecosystem": "Hệ sinh thái Ethereum",
   "etherscan_history": "Lịch sử Etherscan",
   "event": "Sự kiện",
   "events": "Các sự kiện",
+  "evm_ecosystem_description": "Nếu cần, hãy sửa đổi mạng và mã thông báo bạn muốn sử dụng cho khoản thanh toán này.",
   "exchange": "Trao đổi",
   "exchange_extra_info": "Xin đừng quên chỉ định bản ghi nhớ hoặc ID bổ sung trong khi gửi giao dịch này để trao đổi",
   "exchange_incorrect_current_wallet_for_xmr": "Nếu bạn muốn trao đổi XMR từ CAPE CAME MONERO BALANCE, vui lòng chuyển sang ví Monero của bạn trước.",
@@ -789,7 +791,9 @@
   "select_destination": "Vui lòng chọn đích cho tệp sao lưu.",
   "select_hw_account_below": "Vui lòng chọn tài khoản nào để khôi phục bên dưới:",
   "select_manufacturer_title": "Chọn nhà sản xuất",
+  "select_network": "Chọn mạng",
   "select_sell_provider_notice": "Chọn nhà cung cấp bán ở trên. Bạn có thể bỏ qua màn hình này bằng cách thiết lập nhà cung cấp bán mặc định trong cài đặt ứng dụng.",
+  "select_token": "Chọn mã thông báo",
   "select_your_country": "Vui lòng chọn quốc gia của bạn",
   "sell": "Bán",
   "sell_alert_content": "Hiện tại chúng tôi chỉ hỗ trợ bán Bitcoin, Ethereum và Litecoin. Vui lòng tạo hoặc chuyển sang ví Bitcoin, Ethereum hoặc Litecoin của bạn.",
