res/values: adds fixed `strings_gn.arb` file

--- a/res/values/strings_gn.arb
+++ b/res/values/strings_gn.arb
@@ -1,9 +1,9 @@
 {
-  "about_cake_pay": "Cake Pay oheja ndeve rejogua hag̃ua  pya'eve umi tarjeta regálo viru virtual reheve, ikatúva ojeipuru  pya'ete amo 150.000 ñemuhara  oĩva  Estados Unidos-pe.",
+  "about_cake_pay": "Cake Pay omoneĩ ndéve eñemomba’eguasu rejasóvo tarjetas de regalo con activos virtuales, ha ikatu oiporu pya’eve hetave 150.000 mba’erechaha Estados Unidos-pe.",
   "account": "Kuenta",
-  "accounts": "Kuentas-kuera",
-  "accounts_subaddresses": "Kuentas ha subdirecciones-kuera",
-  "activate": "Jeactiva",
+  "accounts": "Kuenta-kuéra",
+  "accounts_subaddresses": "Cuentas ha subdirecciones",
+  "activate": "Jepurúi",
   "active": "Ojeipuruva",
   "active_cards": "Tarheta oipurúva",
   "activeConnectionsPrompt": "Umi joaju oĩva ojehechaukáta ko'ápe",
@@ -12,7 +12,7 @@
   "add_contact_to_address_book": "¿Remoĩsepa ko contacto nde kuatiajoapy'i  dirección-pe?",
   "add_custom_node": "Ñemoĩve nodo pyahu nde  reipotahaicha",
   "add_custom_redemption": "Ñemoĩve mbaʼe reipotahaicha",
-  "add_fund_to_card": "Ñemoĩve viru jehepyme'ẽra  tarjeta-pe (peve ${hepykue})",
+  "add_fund_to_card": "Ñemoĩve viru jehepyme'ẽra  tarjeta-pe (peve ${value})",
   "add_new_node": "Ñemoĩve nodo pyahu",
   "add_new_word": "Ñemoĩve nodo pyahu",
   "add_receiver": "Ñemoĩve ambue tapicha (poravokuaa)",
@@ -101,7 +101,7 @@
   "cake_pay_web_cards_title": "Tarjeta web Cake hepyme’ẽ rehegua",
   "cake_wallet": "Cake Wallet",
   "cakepay_prepaid_card": "Tarjeta Débito Prepagada Cake hepyme’ẽ rehegua",
-  "camera_consent": "Ojepurúta nde cámara ojapyhývo ta’ãngamýi ${Ñemuha} Tembiapo ñemohendaguasu rehehápe. Ehecha ikatu hag̃ua eguerekove teko marandu ñemi rehegua.",
+  "camera_consent": "Ojepurúta nde cámara ojapyhývo ta’ãngamýi ${provider} Tembiapo ñemohendaguasu rehehápe. Ehecha ikatu hag̃ua eguerekove teko marandu ñemi rehegua.",
   "camera_permission_is_required": "Oikotevẽ cámara ñemoneĩ reheve permiso. Embokatupyry app ñemohenda rupive.",
   "cancel": "Eheja",
   "card_address": "dirección-kuera",
@@ -163,7 +163,7 @@
   "contract_warning": "Ko dirección contrato rehegua ojehechakuaa ikatuha haʼe peteĩ ñembotavy. Rejesareko porãke rejapóvo.",
   "contractName": "Ñoñe'ẽme'ẽ réra",
   "contractSymbol": "Mba'ejehero pe ñoñe'ẽme'ẽ",
-  "copied_key_to_clipboard": "Ojekopia $ portapapel-pe",
+  "copied_key_to_clipboard": "Ojekopia ${key} portapapel-pe",
   "copied_to_clipboard": "Ojekopia portapapeles-pe",
   "copy": "Ojekopiajo'ava",
   "copy_address": "Jekopia direccion",
@@ -193,7 +193,7 @@
   "delete": "Emboje'o",
   "delete_account": "Embogue kuenta",
   "delete_wallet": "Embogue billetera",
-  "delete_wallet_confirm_message": "¿Reime añete rembogueseha billetera ${billetera réra}?",
+  "delete_wallet_confirm_message": "¿Reime añete rembogueseha billetera ${wallet_name}?",
   "deleteConnectionConfirmationPrompt": "Reime añete rembogueseha pe joaju",
   "denominations": "Mba'e jeheróha kuera",
   "derivationpath": "Tape oñemboguataha",
@@ -218,7 +218,7 @@
   "discount": "Ñongatu",
   "display_settings": "Jehechaha ñemohenda",
   "displayable": "Ojehechaukuaáva",
-  "do_not_have_enough_gas_asset": "Ndoguerekoi hetakue $(viru ñemoambue) ikatu ojejapo peteĩ ñembohasa umi teko ko'angagua ndive red blockchain rehegua. Oikotevẽve(viru ñemoambue) hepyme'ẽ hag̃ua mba'erepy red blokchain rehegua, jepe rahaukavo peteĩ activo",
+  "do_not_have_enough_gas_asset": "Ndoguerekoi hetakue ${currency} ikatu ojejapo peteĩ ñembohasa umi teko ko'angagua ndive red blockchain rehegua. Oikotevẽve(viru ñemoambue) hepyme'ẽ hag̃ua mba'erepy red blokchain rehegua, jepe rahaukavo peteĩ activo",
   "do_not_send": "Ani remondo",
   "do_not_send_funds_to_contract_address_warning": "Ani remondo ovaleva ko dirección-pe. \n\n Kóva ha'e peteĩ jehechakuaapyrã upe token-pe g̃uarã,  okañyta umi viru oñemondova ko dirección-pe  \n\n cake ndojeruremo'ãi ndeve remoĩ hag̃ua peteĩ dirección contrato rehegua",
   "do_not_share_warning_text": "Ani rembohasa koa avavépe, tahaʼe jepe pe pytyvõ rehegua.\n\nNde viru ikatu oñemonda ha ojehepymeʼẽ.",
@@ -257,9 +257,9 @@
   "error_text_input_above_maximum_limit": "pe papapy tuichavé pe hetakuégui",
   "error_text_input_below_minimum_limit": "pe papapy sa’ive pe michĩvevagui",
   "error_text_keys": "Umi llave billetera rehegua ikatu oguereko 64 tai hexadecimal",
-  "error_text_limits_loading_failed": "Pe ñemuharenda rupi ${Tekoteveme'ê} noñemoheñoiri. limite cargarehegua 0sêvai",
-  "error_text_maximum_limit": "Pe ñemuharenda  rupi  ${Tekoteveme'ê} noñemoheñoiri. pe mba´erepy ha´e hetave pe hetakué yvatevevaguí ${max}${currency}",
-  "error_text_minimal_limit": "pe ñemuharenda  rupi  ${Tekoteveme'ê} noñemoheñoiri. Pe mba´erepy ha´e sa´ive pe michivevagui ${min}${currency}",
+  "error_text_limits_loading_failed": "Pe ñemuharenda rupi ${provider} noñemoheñoiri. limite cargarehegua 0sêvai",
+  "error_text_maximum_limit": "Pe ñemuharenda  rupi  ${provider} noñemoheñoiri. pe mba´erepy ha´e hetave pe hetakué yvatevevaguí ${max}${currency}",
+  "error_text_minimal_limit": "pe ñemuharenda  rupi  ${provider} noñemoheñoiri. Pe mba´erepy ha´e sa´ive pe michivevagui ${min}${currency}",
   "error_text_node_address": "Ikatu remoî  peteî dirección iPv4",
   "error_text_node_port": "Pe puerto nodo rehegua ikatu oguereko 0 ha 66535",
   "error_text_node_proxy_address": "remoî <dirección IPv4>:<puerto>, techapyrâ ramo 127.0.0.1:9050",
@@ -279,7 +279,7 @@
   "exchange": "Me'ẽjovái",
   "exchange_incorrect_current_wallet_for_xmr": "Reipota ramo me’ẽjovái  XMR nde saldo Cake Wallet Monero-pe guive, rembohasa raẽ nde billetera Monero-pe.",
   "exchange_new_template": "Plantilla pyahú",
-  "exchange_provider_unsupported": "¡${Ñemuha rera} ndaikatúi ojeipuruve!",
+  "exchange_provider_unsupported": "¡${providerName ndaikatúi ojeipuruve!",
   "exchange_result_confirm": "jejopyvo ñemoañeteha, oñemondota${etiqueta jehupyty}${rehegua} nde billetera guive hérava${billetera rera} pe dirección ohechaukava upe rire. Térã ikatu remondo nde billetera  okápeguá guive ambué dirección / código  QR mboyvegua-pe Emboguapyvo ‘ñemoañete’ reike hag̃ua térã eju jey remoambue hag̃ua pe monto.",
   "exchange_result_description": "Tekotevẽ remondo peteĩ mba’e michĩvéva ${etiqueta jehupy} ${Rehegua}  pe dirección ojehechaukáva kuatiápe upe rire. Remondóramo michĩve ${etiqueta jehupyty} ${rehegua}-gui, ikatu ndoñembohasai ha ndojehepyme’ẽjeymo’ãi.",
   "exchange_result_write_down_ID": "Ekopiáke térã rehaí nde ID ojehechaukáva yvate.",
@@ -343,7 +343,7 @@
   "incorrect_seed": "pe jehaipyre oñemoiva ndoikói",
   "inputs": "jeikéha",
   "insufficient_lamport_for_tx": "Ndoguerekói heta SOL ojapo hag̃ua pe transacción ha avei pe mba'erepy ñemondo hag̃ua. Ikatu remoĩve SOL nde billetera-pe térã remomichĩve pe SOL remondoséva",
-  "insufficient_lamports": "Ndoguerekói heta SOL ojapo hag̃ua pe transacción ha avei pe mba'erepy ñemondo hag̃ua. Reikotevẽ peteĩ michĩmi ${Pe monto Sol Oñeikotevẽva} SOL rehe. Remoive SOL nde billetera-pe térã emomichĩve pe monto remondoséva.",
+  "insufficient_lamports": "Ndoguerekói heta SOL ojapo hag̃ua pe transacción ha avei pe mba'erepy ñemondo hag̃ua. Reikotevẽ peteĩ michĩmi $${solValueNeeded} SOL rehe. Remoive SOL nde billetera-pe térã emomichĩve pe monto remondoséva.",
   "insufficientFundsForRentError": "Ndoguerekói heta SOL jehepymeʼẽ hag̃ua pe transacción ha ñemeʼẽ hag̃ua mbaʼerepy  cuenta-pe. Ikatu remoĩve SOL nde billetera-pe térã remomichĩve pe SOL remondoséva.",
   "introducing_cake_pay": "Roikuaauka hepyme’ẽ Cake Pay!",
   "invalid_input": "Jeikeha ndoikoi",
@@ -386,7 +386,7 @@
   "monero_com_wallet_text": "Viru ñongatuha porãite Monero-pe g̃uarã",
   "monero_dark_theme": "Mba’e tema iñypytũva Monero rehegua",
   "monero_light_theme": "Monero rembiporu vevýi",
-  "moonpay_alert_text": "Pe valor hetakue tekotevẽ tuichave térã ojoja ${hetakue michĩvéva} ${moneda fiduciaria}-re.",
+  "moonpay_alert_text": "Pe valor hetakue tekotevẽ tuichave térã ojoja ${minAmount} ${fiatCurrency}-re.",
   "more_options": "Ambue ojeiporavokuaa",
   "name": "Téra",
   "nano_current_rep": "Omyakãva ko'ág̃agua",
@@ -468,7 +468,7 @@
   "please_try_to_connect_to_another_node": "Eñehaʼã eñembojoaju ambue nodo rehe",
   "please_wait": "Ehaʼãromina",
   "polygonscan_history": "PolygonScan rapykuere",
-  "powered_by": "Oñemombarete ${myakãha} rehe.",
+  "powered_by": "Oñemombarete ${title} rehe.",
   "pre_seed_button_text": "Aikuaa. Ehechauka chéve che ñeʼẽñemi",
   "pre_seed_description": "Pe kuatiarogue oúvape rehecháta ñeʼẽ aty. Peva haʼe nde ñeʼẽñemi ijojahaʼỹva ha jekuaaʼỹva, ha péva rupi añoite ikatu rehupyty jey nde billetera oñehundi térã ndoikói ramo. Haʼe nde rembiapo rehai porã ha reñongatu peteĩ tenda ñangarekó porãháme , okápe Cake Wallet-gui.",
   "pre_seed_title": "Mbaʼeguasu",
@@ -482,7 +482,7 @@
   "proceed_on_device": "Ehasave nde rembipuru ndive.",
   "proceed_on_device_description": "Ejapo ojerurehaichaite ndeve rejapo hag̃ua nde billetera hardware-pe",
   "profile": "Ta’anga techaukaha",
-  "provider_error": "Ojavy ${ñemuha}",
+  "provider_error": "Ojavy ${provider}",
   "public_key": "Papapy jekuaahapyre",
   "purchase_gift_card": "Jogua tarjeta regalo",
   "purple_dark_theme": "Téma pytã́ũ hesakã’ỹva",
@@ -554,7 +554,7 @@
   "restore_wallet_name": "bielletera rera",
   "restore_wallet_restore_description": "Moheñoi jey billetera",
   "robinhood_option_description": "Ejogua ha embohasa pyaʼe reipuruvo nde tarjeta débito, cuenta bancaria térã saldo Robinhood. Koa EE.UU.-pe añoite ikatu.",
-  "router_no_route": "Ndaipori tape jeiporavo upeva-pe g̃uarã añoite.${téra}",
+  "router_no_route": "Ndaipori tape jeiporavo upeva-pe g̃uarã añoite.${name}",
   "save": "Ñongatu",
   "save_backup_password": "Remoañetete reñongatuma hague nde ñe’ẽñemi pytyvõha. Ndaikatumo’ãi remoingejey nde marandu ñongatupyre reiporú’ỹre upeva.",
   "save_backup_password_alert": "Ñongatu ñe’ẽñemi pytyvõha",
@@ -619,7 +619,7 @@
   "send_name": "Téra",
   "send_new": "Pyahu",
   "send_payment_id": "ID Jehepyme’ẽ (ojeiporavokuaava)",
-  "send_priority": "Ko’ánga oñemohenda tarifa ${ñembohasa tenonderãme}. Pe ñembohasa ñemotenonde ikatu oñemohenda configuración-pe.",
+  "send_priority": "Ko’ánga oñemohenda tarifa ${transactionPriority}. Pe ñembohasa ñemotenonde ikatu oñemohenda configuración-pe.",
   "send_sending": "",
   "send_success": "Oñemondo hína...",
   "send_templates": "Plantilla-kuéra",
@@ -756,11 +756,11 @@
   "trade_details_provider": "Ñeme'ẽha pytyvõ",
   "trade_details_state": "Teko",
   "trade_details_title": "Marandu ñemu rehegua",
-  "trade_for_not_created": "Ñemu rupive ${myakãha} ndojejapói.",
+  "trade_for_not_created": "Ñemu rupive ${title} ndojejapói.",
   "trade_history_title": "Ñemu rapykuerei.",
   "trade_id": "ID Ñemuha reheguai.",
-  "trade_id_not_found": "ñemuha ${ñemu} pe ${myakãha} ndojejuhui.",
-  "trade_is_powered_by": "Ko ñemuharenda omyakã ${Ñeme'ẽha pytyvõ  } rupi",
+  "trade_id_not_found": "ñemuha ${tradeId} pe ${title} ndojejuhui.",
+  "trade_is_powered_by": "Ko ñemuharenda omyakã ${provider} rupi",
   "trade_not_created": "Ndojejapói ñemu",
   "trade_not_found": "Ñemu ndojejuhúi",
   "trade_state_btc_sent": "BTC Ojeguenohẽma",
@@ -799,7 +799,7 @@
   "transactions_by_date": "Ára ñembohasa-kuera rehegua",
   "trongrid_history": "trongrid rapykuere",
   "trusted": "jeroviaha",
-  "tx_commit_exception_no_dust_on_change": "Oñemboyke pe transacción ko monto reheve. Ko’ã moneda rupive ikatu remondo ${michĩveva} ndorekóiva ñemoambue térã ${tuichaveva} ombohasa  jey pe ñemoambue.",
+  "tx_commit_exception_no_dust_on_change": "Oñemboyke pe transacción ko monto reheve. Ko’ã moneda rupive ikatu remondo ${min} ndorekóiva ñemoambue térã ${max} ombohasa  jey pe ñemoambue.",
   "tx_commit_failed": "Pe transacción moañete ndoikói. Eñe’ẽ soporte ndive.",
   "tx_invalid_input": "Reipuru mba’e jeike ndaha’éiva ko hepyme’ẽme g̃uarã.",
   "tx_no_dust_exception": "Pe transacción oñemboyke oñemondoramo monto michĩeterei. Eha’ã embohetave pe monto.",
@@ -848,8 +848,8 @@
   "wallet_keys": "Billetera ñe’ẽ ñemi /papapy",
   "wallet_list_create_new_wallet": "Emoheñoi billetera pyahu",
   "wallet_list_edit_wallet": "Emohenda jey nde billetera",
-  "wallet_list_failed_to_load": "Ndaikatúi ojehupi billetera ${billetera réra}. ${jejavy}",
-  "wallet_list_failed_to_remove": "Oiko jejavy oñemboguévo billetera ${Billetera rera}. ${Jejavy}",
+  "wallet_list_failed_to_load": "Ndaikatúi ojehupi billetera ${wallet_name}. ${error}",
+  "wallet_list_failed_to_remove": "Oiko jejavy oñemboguévo billetera ${wallet_name}. ${error}",
   "wallet_list_load_wallet": "Billetera carga-rehegua",
   "wallet_list_loading_wallet": "Billetera $Billetera rera} carga rehegua",
   "wallet_list_removing_wallet": "Ñeguenohe ${billetera rera} Billetera",
