res/values: undoes wrong GN=>ES translations on file

--- a/res/values/strings_gn.arb
+++ b/res/values/strings_gn.arb
@@ -1,10 +1,10 @@
 {
-  "about_cake_pay": "Cake Pay omoneĩ ndéve eñemomba’eguasu rejasóvo tarjetas de regalo con activos virtuales, ha ikatu oiporu pya’eve hetave 150.000 mba’erechaha Estados Unidos-pe.",
+  "about_cake_pay": "Cake Pay oheja ndeve rejogua hag̃ua  pya'eve umi tarjeta regálo viru virtual reheve, ikatúva ojeipuru  pya'ete amo 150.000 ñemuhara  oĩva  Estados Unidos-pe.",
   "account": "Kuenta",
-  "accounts": "Kuenta-kuéra",
-  "accounts_subaddresses": "Cuentas ha subdirecciones",
+  "accounts": "Kuentas-kuera",
+  "accounts_subaddresses": "Kuentas ha subdirecciones-kuera",
   "activate": "Jepurúi",
-  "active": "Ojeipuruva",
+  "activate": "Jeactiva",
   "active_cards": "Tarheta oipurúva",
   "activeConnectionsPrompt": "Umi joaju oĩva ojehechaukáta ko'ápe",
   "add": "Moĩve",
