res/values: adds revised `strings_gn.arb` file

--- a/res/values/strings_gn.arb
+++ b/res/values/strings_gn.arb
@@ -1,10 +1,10 @@
 {
-  "about_cake_pay": "Cake Pay oheja ndeve rejogua hag̃ua  pya'eve umi tarjeta regálo viru virtual reheve, ikatúva ojeipuru  pya'ete amo 150.000 ñemuhara  oĩva  Estados Unidos-pe.",
+  "about_cake_pay": "Cake Pay omoneĩ ndéve eñemomba’eguasu rejasóvo tarjetas de regalo con activos virtuales, ha ikatu oiporu pya’eve hetave 150.000 mba’erechaha Estados Unidos-pe.",
   "account": "Kuenta",
-  "accounts": "Kuentas-kuera",
-  "accounts_subaddresses": "Kuentas ha subdirecciones-kuera",
+  "accounts": "Kuenta-kuéra",
+  "accounts_subaddresses": "Cuentas ha subdirecciones",
   "activate": "Jepurúi",
-  "activate": "Jeactiva",
+  "active": "Ojeipuruva",
   "active_cards": "Tarheta oipurúva",
   "activeConnectionsPrompt": "Umi joaju oĩva ojehechaukáta ko'ápe",
   "add": "Moĩve",
@@ -120,7 +120,7 @@
   "change_rep": "Omyakãva pe ñembohasa",
   "change_rep_message": "¿Reime añetehapepa remoambuéseha umi tembiapo omotenondeva?",
   "change_rep_successful": "Omyakãva iñambué porã",
-  "change_wallet_alert_content": "Emoambuesépa billetera ko'ag̃agua pe ${Billetera_Hera}-?",
+  "change_wallet_alert_content": "Emoambuesépa billetera ko'ag̃agua pe ${wallet_name}-?",
   "change_wallet_alert_title": "Ñemoambue billetera ko'ágãgua",
   "choose_account": "Eiporavo Kuenta",
   "choose_address": "Ikatu eiporavo pe dirección",
@@ -177,7 +177,7 @@
   "create_new": "Ejapo billetera pyahu",
   "create_new_account": "Ejapo peteĩ cuenta pyahu",
   "creating_new_wallet": "Omoheñóivo billetera pyahu",
-  "creating_new_wallet_error": "Jejavy ${haipyre}",
+  "creating_new_wallet_error": "Jejavy ${description}",
   "creation_date": "Ára ojejapo hague",
   "custom": "Jepokuaa",
   "custom_drag": "Remboguata eipotahaichaite",
@@ -280,8 +280,8 @@
   "exchange_incorrect_current_wallet_for_xmr": "Reipota ramo me’ẽjovái  XMR nde saldo Cake Wallet Monero-pe guive, rembohasa raẽ nde billetera Monero-pe.",
   "exchange_new_template": "Plantilla pyahú",
   "exchange_provider_unsupported": "¡${providerName} ndaikatúi ojeipuruve!",
-  "exchange_result_confirm": "jejopyvo ñemoañeteha, oñemondota${etiqueta jehupyty}${rehegua} nde billetera guive hérava${billetera rera} pe dirección ohechaukava upe rire. Térã ikatu remondo nde billetera  okápeguá guive ambué dirección / código  QR mboyvegua-pe Emboguapyvo ‘ñemoañete’ reike hag̃ua térã eju jey remoambue hag̃ua pe monto.",
-  "exchange_result_description": "Tekotevẽ remondo peteĩ mba’e michĩvéva ${etiqueta jehupy} ${Rehegua}  pe dirección ojehechaukáva kuatiápe upe rire. Remondóramo michĩve ${etiqueta jehupyty} ${rehegua}-gui, ikatu ndoñembohasai ha ndojehepyme’ẽjeymo’ãi.",
+  "exchange_result_confirm": "jejopyvo ñemoañeteha, oñemondota${fetchingLabel} ${from} nde billetera guive hérava${walletName} pe dirección ohechaukava upe rire. Térã ikatu remondo nde billetera  okápeguá guive ambué dirección / código  QR mboyvegua-pe Emboguapyvo ‘ñemoañete’ reike hag̃ua térã eju jey remoambue hag̃ua pe monto.",
+  "exchange_result_description": "Tekotevẽ remondo peteĩ mba’e michĩvéva ${fetchingLabel} ${from}  pe dirección ojehechaukáva kuatiápe upe rire. Remondóramo michĩve ${fetchingLabel} ${from}-gui, ikatu ndoñembohasai ha ndojehepyme’ẽjeymo’ãi.",
   "exchange_result_write_down_ID": "Ekopiáke térã rehaí nde ID ojehechaukáva yvate.",
   "exchange_result_write_down_trade_id": "Ikatu ramo, ekopia térã rehaí pe ID.",
   "exchange_sync_alert_content": "Eha'arõ nde billetera oñembojoja peve.",
@@ -291,7 +291,7 @@
   "expiry_and_validity": "Opaha ára ha hekorã.",
   "export_backup": "Mboguata ñangareko joja rehegua",
   "extra_id": "ID joapy:",
-  "extracted_address_content": "Ombohasa viru ${ohupytyva_rera}-pe.",
+  "extracted_address_content": "Ombohasa viru ${recipient_name}-pe.",
   "failed_authentication": "Ñembojoaju jejavy.",
   "faq": "Porandu ojejapóva jepi.",
   "features": "Mba'erechaukaha",
@@ -378,7 +378,7 @@
   "message_verified": "Pe marandu ojehechapa porã",
   "methods": "Mbaʼeichapa",
   "min_amount": "Saʼive: ${value}",
-  "min_value": "Saʼive: ${mboy} ${moneda}",
+  "min_value": "Saʼive: ${value} ${currency}",
   "minutes_to_pin_code": "Aravoʼi",
   "mm": "mm",
   "modify_2fa": "Ñemoambue mbujapeheʼẽ 2FA",
@@ -624,7 +624,7 @@
   "send_success": "Oñemondo hína...",
   "send_templates": "Plantilla-kuéra",
   "send_title": "Emondo",
-  "send_to_this_address": "Emondo ${moneda} ${etiqueta} ko dirección-pe",
+  "send_to_this_address": "Emondo ${currency} ${tag} ko dirección-pe",
   "send_xmr": "Emondo XMR",
   "send_your_wallet": "Nde billetera",
   "sending": "Oñemondo hína",
@@ -809,8 +809,8 @@
   "tx_rejected_dust_output": "Oñemboyke pe transacción red rembiapo rupi: osẽva michĩeterei . Embohetave pe monto.",
   "tx_rejected_dust_output_send_all": "Oñemboyke pe transacción red rembiapo rupi: Osẽva michĩeterei . Ehecha porã moneda reiporavóva moneda ñangarekohápe.",
   "tx_rejected_vout_negative": "Ndaipóri mba’eve saldo hepyme’ẽ haguã tarifa ko transacción rehegua. Ehecha porã pe  moneda saldo oĩva moneda ñangarekohápe.",
-  "tx_wrong_balance_exception": "Ndaipóri heta  ${moneda}  remondo hag̃ua ko monto.",
-  "tx_wrong_balance_with_amount_exception": "Ndaipóri heta ${moneda} remondo hag̃ua enteroite monto. ${mboypa}",
+  "tx_wrong_balance_exception": "Ndaipóri heta  ${currency}  remondo hag̃ua ko monto.",
+  "tx_wrong_balance_with_amount_exception": "Ndaipóri heta ${currency} remondo hag̃ua enteroite monto. ${amount}",
   "tx_zero_fee_exception": "Ndaikatúi emondo transacción 0 tarifa-va. Eha’ã embohetave pe tasa térã ehecha nde joaju ikatu hag̃ua eguereko umi tarifa pyahu ipahaitepe g̃uara.",
   "unavailable_balance": "Ndoikoi saldo jeipururã",
   "unavailable_balance_description": "Ndoikói saldo ojeipuru haguã: ko enteroite oguereko viru oñembotýva transacción oha’arõhápe ha avei umi remohãtãva ne configuración-pe moneda ñangarekohápe. Umi saldo ojejokóva ikatúta ojepuru og̃uahembavove transacción-kuéra, ha umi saldo oĩva jejokópe opytáta ndaikatúi hag̃ua ojeipuru, reipe´apeve peve jejokógui.",
@@ -823,7 +823,7 @@
   "unspent_coins_title": "Viru ndojepuruiva.",
   "unsupported_asset": "Ndoroipytyvõi ko mba’e jejapo activo rehegua. Emoheñói térã emoambue peteĩ billetera ojepurukuaáva peteĩ activo rehegua añoite.",
   "uptime": "Ara ñemba’apohá",
-  "upto": "Kóva peve ${monto}",
+  "upto": "Kóva peve ${value}",
   "usb": "USB",
   "use": "Reipuru pe",
   "use_card_info_three": "Eipuru peteĩ tarjeta línea rehegua térã ambue jehepyme’ẽ ojepokó’ỹva.",
@@ -851,8 +851,8 @@
   "wallet_list_failed_to_load": "Ndaikatúi ojehupi billetera ${wallet_name}. ${error}",
   "wallet_list_failed_to_remove": "Oiko jejavy oñemboguévo billetera ${wallet_name}. ${error}",
   "wallet_list_load_wallet": "Billetera carga-rehegua",
-  "wallet_list_loading_wallet": "Billetera $Billetera rera} carga rehegua",
-  "wallet_list_removing_wallet": "Ñeguenohe ${billetera rera} Billetera",
+  "wallet_list_loading_wallet": "Billetera ${wallet_name} carga rehegua",
+  "wallet_list_removing_wallet": "Ñeguenohe ${wallet_name} Billetera",
   "wallet_list_restore_wallet": "Mbopyahu billetera",
   "wallet_list_title": "Billetera  Monero-rehegua",
   "wallet_list_wallet_name": "billetera rera",
